--- a/Ethereal World/index.html
+++ b/Ethereal World/index.html
@@ -77,13 +77,13 @@
 
         <div class="img4">
 
-                <a href="#"><img class="img img01" src="../Practice 3/img/portfolio-1.jpg" alt=""></a>
+                <a href="#"><img class="img img01" src="../Ethereal World/img/portfolio-1.jpg" alt=""></a>
 
-                <a href="#"><img class="img img02" src="../Practice 3/img/portfolio-2.jpg" alt=""></a>
+                <a href="#"><img class="img img02" src="../Ethereal World/img/portfolio-2.jpg" alt=""></a>
 
-                <a href="#"><img class="img img03" src="../Practice 3/img/portfolio-3.jpg" alt=""></a>
+                <a href="#"><img class="img img03" src="../Ethereal World/img/portfolio-3.jpg" alt=""></a>
 
-                <a href="#"><img class="img img04" src="../Practice 3/img/portfolio-4.jpg" alt=""></a>
+                <a href="#"><img class="img img04" src="../Ethereal World/img/portfolio-4.jpg" alt=""></a>
 
             <form action="">
                 <input type="submit" value="View More Items">
@@ -103,7 +103,7 @@
                <b>"</b> Morbi velit mauris, hendrerit in convallis vel, laoreet et orci. Integer semper, est vel congue suscipit, nisl nibh convallis lorem, sit amet faucibus purus lacus eu nulla. Sed nec blandit ante, sed semper tellus. <b>"</b>
             </p>
 
-            <img src="../Practice 3/img/team-img-01.jpg" alt="">
+            <img src="../Ethereal World/img/team-img-01.jpg" alt="">
 
             <h3>John Deo</h3>
         </div>
