--- a/Ethereal World/index.html
+++ b/Ethereal World/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice 3</title>
+    <title>Ethereal World</title>
     <link rel="stylesheet" href="css/stayl.css">
 </head>
 <body>
