--- a/Ethereal World/index.html
+++ b/Ethereal World/index.html
@@ -23,7 +23,7 @@
                 <li class="texta"><a href="#work">Work</a></li>
                 <li class="texta"><a href="#testimonial">Testimonial</a></li>
                 <li class="texta"><a href="#about">About</a></li>
-                <li class="texta"><a href="#">Contact Us</a></li>
+                <li class="texta"><a href="#contact">Contact Us</a></li>
             </ul>
         </div>
     </header>
@@ -147,5 +147,39 @@
             </div>
         </div>
     </section>
+
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+
+        <div class="cont">
+            <form action="">
+                <input class="input1" type="text" placeholder="Name">
+
+                <input class="input2" type="email" placeholder="E-mail">
+
+                <textarea placeholder="Massege" name="" id="" cols="50" rows="10"></textarea>
+
+                <input class="input3" type="submit" value="Send Massege">
+            </form>
+        </div>
+
+        <div class="emnumber">
+            <h4>Address</h4>
+
+            <p>
+                123, This Appartment,<br>
+                Near Ocean Street <br>
+                New York 
+            </p>
+
+            <p class="number">
+                📧 hello@w3template.com <br>
+                📱 123 456 789
+
+            </p>
+        </div>
+    </section>
+
+    <footer class="footer"></footer>
 </body>
 </html>
