--- a/Ethereal World/index.html
+++ b/Ethereal World/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ethereal World</title>
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+    <!-- Stayl file -->
     <link rel="stylesheet" href="css/stayl.css">
 </head>
 <body>
@@ -180,6 +185,18 @@
         </div>
     </section>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <p class="p1">Copyright © Ethereal 2018</p>
+
+        <div>
+            <a href="#"><i class="fac fa-brands fa-square-facebook"></i></a>
+
+            <a href="#"><i class="tw fa-brands fa-square-twitter"></i></a>
+
+            <a href="#"><i class="in fa-brands fa-invision"></i></a>
+        </div>
+
+        <p class="p2">Designed by <a href="#">W3 Template</a></p>
+    </footer>
 </body>
 </html>
