--- a/Ethereal World/index.html
+++ b/Ethereal World/index.html
@@ -178,8 +178,8 @@
             </p>
 
             <p class="number">
-                📧 hello@w3template.com <br>
-                📱 123 456 789
+                <i class="fa fa-at" aria-hidden="true">  </i> hello@w3template.com <br>
+                <i class="fa fa-phone" aria-hidden="true"></i> 123 456 789
 
             </p>
         </div>
