--- a/Ethereal World/index.html
+++ b/Ethereal World/index.html
@@ -56,6 +56,7 @@
             <div class="porag">
                 <h3><i>Elementum laoreet</i></h3>
 
+                <i class="fa-regular fa-lightbulb"></i>
                 <p>Cras aliquet et mi id fermentum. Suspendisse eget sodales lorem, vestibulum euismod lectus.</p>
             </div>
         </div>
@@ -64,6 +65,7 @@
             <div class="porag">
                 <h3><i>Elementum laoreet</i></h3>
 
+                <i class="fa-regular fa-eye"></i>
                 <p>Cras aliquet et mi id fermentum. Suspendisse eget sodales lorem, vestibulum euismod lectus.</p>
             </div>
         </div>
@@ -72,6 +74,7 @@
             <div class="porag">
                 <h3><i>Elementum laoreet</i></h3>
 
+                <i class="fa-regular fa-heart"></i>
                 <p>Cras aliquet et mi id fermentum. Suspendisse eget sodales lorem, vestibulum euismod lectus.</p>
             </div>
         </div>
