--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -46,6 +46,100 @@
                 </div>
             </div>
         </div>
-    </header>
+    </header> <!-- End of Header -->
+
+    <!-- Section 1 start -->
+    <section class="section-1">
+        <div class="art-title">
+            <h1>Recent Arts & Designs</h1>
+            <p>RECENT ARTS & DESIGNS ON THE BLOG</p>
+        </div>
+        <div class="arts-designs">
+            <div class="box">
+                <div class="container">
+                    <div class="Art-img">
+                        <img src="img/art-desing-1.jpg" alt="">
+                    </div>
+                    <i class="fa fa-heart" aria-hidden="true"> 22</i>
+                    <h3>Arts & Designs</h3>
+                </div>
+                <p>Make An Awesome Art Portfolio For College Or University</p>
+            </div>
+
+            <div class="box">
+                <div class="container">
+                    <div class="Art-img">
+                        <img src="img/art-desing-2.jpg" alt="">
+                    </div>
+                    <i class="fa fa-heart" aria-hidden="true"> 22</i>
+                    <h3>Arts & Designs</h3>
+                </div>
+                <p>Make An Awesome Art Portfolio For College Or University</p>
+            </div>
+
+            <div class="box">
+                <div class="container">
+                    <div class="Art-img">
+                        <img src="img/art-desing-3.jpg" alt="">
+                    </div>
+                    <i class="fa fa-heart" aria-hidden="true"> 22</i>
+                    <h3>Arts & Designs</h3>
+                </div>
+                <p>Make An Awesome Art Portfolio For College Or University</p>
+            </div>
+        </div>
+
+        <div class="arts-designs">
+            <div class="box">
+                <div class="container">
+                    <div class="Art-img">
+                        <img src="img/art-desing-4.jpg" alt="">
+                    </div>
+                    <i class="fa fa-heart" aria-hidden="true"> 22</i>
+                    <h3>Arts & Designs</h3>
+                </div>
+                <p>Make An Awesome Art Portfolio For College Or University</p>
+            </div>
+
+            <div class="box">
+                <div class="container">
+                    <div class="Art-img">
+                        <img src="img/art-desing-5.jpg" alt="">
+                    </div>
+                    <i class="fa fa-heart" aria-hidden="true"> 22</i>
+                    <h3>Arts & Designs</h3>
+                </div>
+                <p>Make An Awesome Art Portfolio For College Or University</p>
+            </div>
+
+            <div class="box">
+                <div class="container">
+                    <div class="Art-img">
+                        <img src="img/art-desing-6.jpg" alt="">
+                    </div>
+                    <i class="fa fa-heart" aria-hidden="true"> 22</i>
+                    <h3>Arts & Designs</h3>
+                </div>
+                <p>Make An Awesome Art Portfolio For College Or University</p>
+            </div>
+        </div>
+    </section> <!-- End of Section 1 -->
+
+    <!-- Section 2 start -->
+    <section class="section-2">
+        <div class="art-title">
+            <h1>Recent Arts & Designs</h1>
+            <p>RECENT ARTS & DESIGNS ON THE BLOG</p>
+        </div>
+
+        <div class="container">
+            <div class="box">
+                <div class="cont-img">
+                    <img src="img/blog-p-1.jpg" alt="">
+                </div>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
