file has been updated

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -136,10 +136,36 @@
             <div class="box">
                 <div class="cont-img">
                     <img src="img/blog-p-1.jpg" alt="">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
                 </div>
-                <i class="fa fa-heart" aria-hidden="true"></i>
+                <div class="cont-img">
+                    <img src="img/blog-p-2.jpg" alt="">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
+                </div>
+                <div class="cont-img">
+                    <img src="img/blog-p-3.jpg" alt="">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div class="box">
+                <div class="cont-img">
+                    <img src="img/blog-p-4.jpg" alt="">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
+                </div>
+                <div class="cont-img">
+                    <img src="img/blog-p-5.jpg" alt="">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
+                </div>
+                <div class="cont-img">
+                    <img src="img/blog-p-6.jpg" alt="">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
+                </div>
             </div>
         </div>
+
+        <section class="section-3" id="about">
+            
+        </section>
     </section>
 </body>
 </html>
